# VulkanStreamReduction

./: CMakeLists.txt  README.md  example1.cpp  example2.cpp  main.cpp
include/: Filter.h  GatherPipeline.h  MapPipeline.h  Pipeline.h  PrefixPipeline.h  ScatterPipeline.h  Shader.h  VulkanContext.h  common.h
shader/: compile.ps1  copy.comp  example1.comp  example2.comp  gather.comp  map.comp  map2.comp  prefix.comp  scatter.comp
src/: Filter.cpp  GatherPipeline.cpp  MapPipeline.cpp  Pipeline.cpp  PrefixPipeline.cpp  ScatterPipeline.cpp  Shader.cpp  VulkanContext.cpp  vulkan_assertion_error.cpp  vulkan_assertion_error.h
